# ModularChess

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/ModularChess/: main.py
src/ModularChess/GameModes/: Classical.py  GameMode.py
src/ModularChess/artificial_intelligence/: AI.py  BasicAI.py  BasicEvaluator.py  Evaluator.py  RandomAI.py
src/ModularChess/controller/: Board.py  Player.py  Timer.py
src/ModularChess/display/: Display.py  Sprites.py
src/ModularChess/game_modes/: Classical.py  GameMode.py
src/ModularChess/movements/: BasicMovement.py  Castling.py  EnPassant.py  Movement.py  Promotion.py
src/ModularChess/pieces/: Bishop.py  Empty.py  King.py  Knight.py  Pawn.py  Piece.py  Queen.py  Rook.py
src/ModularChess/utils/: BasicMovement.py  Castling.py  EnPassant.py  Exceptions.py  Movement.py  MovementsGraph.py  Position.py  Promotion.py  Promtion.py
tests/: test_Position.py  test_Timer.py
tests/ManualTests/: test1.py  test2.py  test3.py
tests/UnitTests/controller/: test_Player.py  test_Timer.py
tests/UnitTests/movements/: test_BasicMovement.py  test_Castling.py  test_Movement.py  test_Promation.py  (+1 more)
tests/controller/: test_Board.py  test_Player.py  test_Timer.py
tests/manualTests/: test1.py  test2.py  test3.py
tests/pieces/: base_test_pieces.py  test_Bishop.py  test_Classical_Pawn.py  test_King.py  test_Knight.py  test_Queen.py  test_Rook.py
tests/utils/: test_BasicMovement.py  test_Castling.py  test_Movement.py  test_MovementsGraph.py  test_Promtion.py
(+9 files in other folders)
