[metadata]
name = ModularChess
description = TODO
version = 0.0.1
author = Ferran Sanchez Llado
author_email = ferransll@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy>=1.21.1
    pygame>=2.0.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
ModularChess = py.typed

[flake8]
max-line-length = 160

[coverage:report]
skip_empty = true
omit = */main.py
exclude_lines =
    pass
    pragma: no cover
    def __repr__
    def __str__
    if __name__ == .__main__.: